K8s/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        version: v01
    spec:
      containers:
      - name: api
        image: "patroltraining.azurecr.io/api:latest"
        ports:
        - containerPort: 80
