K8s/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v01
    spec:
      containers:
      - name: frontend
        image: "patroltraining.azurecr.io/frontend:latest"
        ports:
        - containerPort: 80
