K8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: patrol-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api, /swagger
        pathType: Prefix
        backend:
          serviceName: api
          servicePort: 80
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
